message(STATUS "pycompass is compiled with" ${CMAKE_CXX_COMPILER})
add_executable(pycompass pycompass.cpp)
target_link_libraries(pycompass PRIVATE pybind11::embed)
set_target_properties(pycompass
    PROPERTIES
    CXX_STANDARD 14
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    # RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python
    # RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/python
    # RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/python
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}
)
